--- a/DataFormmating.ipynb
+++ b/DataFormmating.ipynb
@@ -369,11 +369,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e3336f69-a8b4-47e6-843b-831d705fde31",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello github\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NEW line for testing GITHUB\n",
+    "print('Hello github')"
+   ]
   },
   {
    "cell_type": "code",
